<resources>
    <string name="app_name">activity1</string>
    <string name="nama">Farhan T I</string>
    <string name="hp">0812746526378</string>
    <string name="submit">submit</string>
    <string name="amg">AMG ONE</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="texttengah">Select your car</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="submit2">SUBMIT</string>

</resources>