<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="50dp"
        app:srcCompat="@drawable/benzlogo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button4"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/teal_200"
            android:text="Button"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:text="Button"
            app:cornerRadius="15dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/purple_700"
        android:text="Button"
        app:cornerRadius="15dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/right"
        app:cornerRadius="15dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginLeft="30dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/left"
        app:cornerRadius="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button9"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_gravity="start"
            android:textSize="35dp"
            android:text="&lt;" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="@string/texttengah" />

        <Button
            android:id="@+id/button11"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_gravity="end"
            android:textSize="35dp"
            android:text="&gt;" />
    </LinearLayout>


</LinearLayout>
